force-app/main/default/objects/KimbleOne__WhatIfScenario__c/KimbleOne__WhatIfScenario__c.object-meta.xml
<CustomObject>
    <label>What If Scenario</label>
    <nameField>
        <label>What If Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>What If Scenarios</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>