force-app/main/default/objects/KimbleOne__WhatIfScenario__c/fields/KimbleOne__WhatIfDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WhatIfDate__c</fullName>
    <label>What If Date</label>
    <type>Date</type>
</CustomField>