force-app/main/default/objects/KimbleOne__WhatIfScenario__c/fields/KimbleOne__WhatIfType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WhatIfType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>What If Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>WhatIfScenarioType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>What If Scenarios (What If Type)</relationshipLabel>
    <relationshipName>WhatIfScenarioTypes</relationshipName>
    <type>Lookup</type>
</CustomField>